# baking.server

./: .coverage  .flake8  alembic.ini  dev.env  mypy.toml  pyproject.toml  ruff.toml
.github/workflows/: python-app.yml
server/: app.py  config.py  exceptions.py  logger.py  middlewares.py
server/db/: models.py
server/errors/: codes.py  handlers.py
server/routers/: health.py
server/routers/health/: __init__.py  models.py  view.py
server/routers/recipe/: model.py
